# Tru-find-ai-MVP

./: .env.example  .gitignore  CONTRIBUTING.md  CURRENT_STATE_BRIEF.md  MASTER_INDEX.md  README.md  docker-compose.yml  pyproject.toml  run_batch_test.py
03_PREQUAL_ENGINE/: Phase_0_Execution_Blueprint.md  Phase_0_Freeze_Boundary.md  Phase_0_Governance_Reconciliation.md  Phase_0_Governance_and_Replayability.md
app/: main.py  schemas.py  scoring.py  signals.py
backend/: alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_baseline.py  0002_account.py  0003_user.py  0004_session.py  0005_magic_link_token.py  0006_magic_link_token_email_encrypted.py  0007_vertical.py  0008_vertical_signal_weight.py  0009_vertical_copy.py  0010_vertical_template.py  0011_vertical_prompt_version.py  0012_account_region.py  0013_lead.py  0014_lead_event_definition.py  0015_lead_event.py  0016_lead_signal_definition.py  0017_lead_signal.py  0018_vertical_lead_signal_weight.py  0019_lead_score_snapshot.py  0020_seed_demo_account_vertical_catalog.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  account.py  analyses_legacy.py  auth.py  health.py
backend/app/clients/: google_business.py
backend/app/core/: config.py  crypto.py  errors.py  event_registry.py  events.py  ids.py  logging.py  middleware.py  observability.py  pii.py
backend/app/db/: base.py  engine.py  session.py
backend/app/db/models/: __init__.py  account.py  lead.py  lead_event.py  lead_event_definition.py  lead_score_snapshot.py  lead_signal.py  lead_signal_definition.py  magic_link_token.py  session.py  user.py  vertical.py  vertical_copy.py  vertical_lead_signal_weight.py  vertical_prompt_version.py  vertical_signal_weight.py  vertical_template.py
backend/app/db/repositories/: __init__.py  account_repo.py  base.py  lead_event_definition_repo.py  lead_event_repo.py  lead_repo.py  lead_score_snapshot_repo.py  lead_signal_definition_repo.py  lead_signal_repo.py  magic_link_token_repo.py  session_repo.py  user_repo.py  vertical_copy_repo.py  vertical_lead_signal_weight_repo.py  vertical_prompt_version_repo.py  vertical_repo.py  vertical_signal_weight_repo.py  vertical_template_repo.py
backend/app/domain/: bridge_shadow.py  scoring.py  scoring_divergence.py  scoring_persistence.py  signals.py
backend/app/domain/auth/: __init__.py  consume.py  events.py  issue.py  sessions.py
backend/app/domain/leads/: __init__.py  events.py  lifecycle.py  recording.py  scoring.py
backend/app/domain/notifications/: email.py
backend/app/vertical/: __init__.py  db_pack.py  pack.py  registry.py  seed.py
backend/app/vertical/packs/: __init__.py
backend/app/vertical/packs/local_business_ai_visibility/: __init__.py  categories.py  competitors.py  copy.py  lead_signal_weights.py  tiers.py  weights.py
backend/tests/: conftest.py  test_account_model.py  test_account_routes.py  test_alembic_scaffolding.py  test_analyze_and_persist.py  test_api_v1.py  test_auth_domain.py  test_auth_routes.py  test_bridge_corpus.py  test_bridge_shadow.py  test_core_config.py  test_core_crypto.py  test_core_event_registry.py  test_core_events.py  test_core_observability.py  test_core_smoke.py  test_db_engine.py  test_db_fixtures.py  test_db_pack.py  test_db_repositories.py  test_lead_event_definition_model.py  test_lead_event_model.py  test_lead_event_repos.py  test_lead_events_registry.py  test_lead_lifecycle.py  test_lead_model.py  test_lead_recording.py  test_lead_repo.py  test_lead_score_snapshot_model.py  test_lead_score_snapshot_repo.py  test_lead_scoring.py  test_lead_signal_definition_model.py  test_lead_signal_model.py  test_lead_signal_repos.py  test_local_business_ai_visibility_pack.py  test_magic_link_token_model.py  test_magic_link_token_repo.py  test_migration_chain.py  test_notifications_email.py  test_scoring_divergence.py  (+18 more)
docs/: migration-assumptions.md  phase-a-exit.md  phase-a-plan.md  phase-b-plan.md  phase-b2-plan.md  phase-b3-plan.md  phase-b4-plan.md  phase-b5-plan.md  phase-b6a-plan.md  phase-b6b-plan.md  rollback-assumptions.md  scaling-assumptions.md  trusignal_recommendation_and_surface_permission_architecture.md
engine_releases/: v0.1.0.yaml
frontend/: .env.example  ResultsPage.jsx  index.html  package-lock.json  package.json  (+3 more)
(+91 files in other folders)
