[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trufindai-backend"
version = "0.1.0"
description = "AI Visibility Scoring backend service"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings>=2.5.0,<3",
    "email-validator>=2.2,<3",
    "structlog>=24.4.0,<25",
    "sentry-sdk[fastapi]>=2.18,<3",
    "sqlalchemy>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "cryptography>=43,<44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
]

# Package discovery: with `where = ["."]` and `include = ["app*"]`, setuptools
# finds the `app` package adjacent to this pyproject.toml. Existing
# `from app.X import Y` imports continue to resolve unchanged after Phase A.3.
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
